--- a/src/components/Command/index.module.scss
+++ b/src/components/Command/index.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   word-break: break-all;
-  border-bottom: 1px solid #aaa;
+  border-bottom: 1px solid #999999;
   padding-bottom: 0.8em;
   margin-bottom: 0.5em;
 
