--- a/src/pages/Welcome/index.module.scss
+++ b/src/pages/Welcome/index.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   display: grid;
-  width: calc(100vw - 6em);
+  width: calc(100vw - 4em);
   grid-template-columns: auto 1fr;
   font-size: 1.6em;
 
